[gd_scene load_steps=4 format=3 uid="uid://cyajjcupwb1e8"]

[ext_resource type="Script" path="res://Scripts/SignScript.gd" id="1_1yakx"]
[ext_resource type="Texture2D" uid="uid://dl37nkl73yyfj" path="res://Sprites/Sign.png" id="2_itrx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0e2wi"]
size = Vector2(52, 56)

[node name="Sign" type="Node2D"]
script = ExtResource("1_1yakx")
labelText = "pialdbvpishldbviy\\nkualihsdv"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_itrx4")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -198.0
offset_top = -227.0
offset_right = 203.0
offset_bottom = -172.0
horizontal_alignment = 1
autowrap_mode = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_0e2wi")

[node name="AdditionalSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -98)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
